@@ -110,6 +110,10 @@ O(x)
 9.9999999999999999999999999999999999999 E-21 + 9.999999999999999999900000000
 0000000000 E-21*I
 4*5 + 3*5^2 + O(5^3)
+74.445568222817551305703193915436427255 + 1.58602795576098137135242138363547
+30014*I
+-74.445568222817551305703193915436427255 + 1.5555646978288118671102219996440
+298828*I
 1
 1.0000000000000000000000000000000000000
 0.95885107720840600054657587043114277616
@@ -163,4 +167,4 @@ gamma: [320, 320, 320]
 lngamma: [320, 320, 320]
 psi: [320, 320, 320]
 zeta: [320, 320, 320]
-Total time spent: 12
+Total time spent: 23
