@@ -67,6 +67,10 @@ log1p(1e-10*(1+I))
 log1p(1e-20*(1+I))
 log1p(2+O(5^3))
 
+a=-1633048355459347662258066616498.+ 107206003159399666971219664801296.*I;
+acosh(a)
+asinh(a)
+
 localprec(1000); abs(sinh(1e-500)-1e-500) < 2e-1500
 
 sinc(0)
